--- a/css/style-xsmall.css
+++ b/css/style-xsmall.css
@@ -62,3 +62,8 @@
 	#banner {
 		padding: 5em 2em 4em 2em;
 	}
+
+	#banner .inner {
+	    margin-left: 1em;
+	    margin-right: 1em;
+	}
